# cfg-rustflags-extern-reproduce

./: 07-29.txt  10-01.txt  Cargo.toml
.cargo/: config.toml
src/: main.rs
