cargo-features = ["profile-rustflags"]

[package]
name = "cfg-rustflags-extern-reproduce"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21", features = ["full", "tracing"] }

[profile.dev]
rustflags = [
    "--cfg", "tokio_unstable"
]
